--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,14 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: sans-serif;
   background-color: #f0f0f0;
   color: #333;
-  margin: 0;
-  padding: 0;
 }
 
 .container {
